syntax = "proto3";

option go_package = "test/grpc/interface/data_exchange";

package data_exchange;

message Document {
    string id = 1;
    Categories categories = 2;
    Title title = 3;
    string type = 4;
    float posted = 5;
}

message Categories {
    string subcategory = 1;
}

message Title {
    string ro = 1;
    string ru = 2;
}

//
// gRPC Upload Service definition
//

service UploadService {
    rpc UploadData (stream Document) returns (Status) {}
}

message Status {
    bool succeded = 1;
}

//
// gRPC Fetch Service definition
//

service FetchService {
    rpc GetDocuments (Pagination) returns (stream Document) {}
    rpc TitleSearch (TitleFilter) returns (stream Document) {}
    rpc SubcategoryDocumentAmount (Categories) returns (DocumentAmount) {}
}

message Pagination {
    int32 limit = 1;
    int32 page = 2;
}

message TitleFilter {
    string subtext = 1;
    string language = 2;
}

message DocumentAmount {
    int32 amount = 1;
}